# gato-toolkit

./: .gitignore  MANIFEST.in  README.md  api.py  entity.py  generator.py  llm.py  pyproject.toml  release-test.sh  release.sh  setup.py
docs/: CONTRIBUTING.md  DESIGN.md  DISTRIBUTION.md
docs/implemenation/: data-model.md  generators.md  language-models.md  prompting.md  services.md
src/: RLHI_Data_Generator.py  api.py  entity.py  generator.py
src/gato/: api.py  entity.py  generator.py  llm.py  prompt.py  service.py
src/gato/pages/: 1_Scenario_Generator.py
