[tool.poetry]
name = "gato-toolkit"
version = "0.1.0"
description = ""
authors = ["Lucas Lofaro <lucasmlofaro@gmail.com>"]
readme = "README.md"
packages = [{include = "gato_toolkit"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
